--- a/docs/01.语言/01.Go/15.map.md
+++ b/docs/01.语言/01.Go/15.map.md
@@ -135,7 +135,7 @@ type mapextra struct {
 
 ::: details
 ```go
-// 为桶 b 创建溢出桶对象
+// 为桶 b 创建溢出桶对象，并返回该溢出桶指针
 func (h *hmap) newoverflow(t *maptype, b *bmap) *bmap {
 	var ovf *bmap
 	if h.extra != nil && h.extra.nextOverflow != nil {
@@ -344,15 +344,7 @@ func makemap(t *maptype, hint int, h *hmap) *hmap {
 * 根据 hint 确定 B 的值，以保证 2^B 个桶能够装下 hint 个元素，且负载因子在约定范围内；
 * 如果只需要一个桶，则延迟在 `mapassign` 函数中进行创建；否则，直接通过`makeBucketArray`创建多个桶及一些溢出桶（如果 B 够大）；
 
-::: details
 ```go
-// makeBucketArray 用于创建一个存储桶数组，并返回该数组的地址和下一个溢出桶的地址
-// 该存储桶数组在内存上是连续的，溢出桶在内存上也是连续的只是返回首个桶的地址
-// 2^b 是需要分配存储桶的最小数量，当 b<4 时，溢出的可能性不大，不会创建溢出桶
-// 当 b>=4 时，会总共申请 2^b+2^b/16 个桶，由于内存申请策略会向上对齐，实际申请的内存可能足以放下更多的桶
-// 此时，取前 2^b 个桶作为存储桶，后面的为溢出桶，buckets 指向存储桶数组首位地址，nextOverflow 指向首位溢出桶
-// dirtyalloc 应该是 nil 或指向之前由 makeBucketArray 以相同 t 和 b 参数分配的存储桶数组
-// 如果 dirtyalloc 是 nil 则会重新申请内存分配一个新的存储桶数组，否则 dirtyalloc 指向的数组将会被清理掉并被重新被复用为底层数组
 func makeBucketArray(t *maptype, b uint8, dirtyalloc unsafe.Pointer) (buckets unsafe.Pointer, nextOverflow *bmap) {
 	base := bucketShift(b)
 	nbuckets := base
@@ -401,8 +393,316 @@ func makeBucketArray(t *maptype, b uint8, dirtyalloc unsafe.Pointer) (buckets un
 	return buckets, nextOverflow
 }
 ```
-:::
+* makeBucketArray 用于创建一个存储桶数组，如果键值对较多的话，会额外创建一些桶作为溢出桶，并返回该数组的地址和第一个溢出桶地址(存储在mapextra结构体的nextOverflow字段)；这些桶在内存上是连续的，取前部分为存储桶，后部分为溢出桶，最后一个溢出桶的溢出指针不为空，以表示该桶是最后一个桶，方便在以指针运算的方式遍历溢出桶时能够获取结束标志；
+* 2^b 是需要分配存储桶的最小数量，当 b<4 时，溢出的可能性不大，不会创建溢出桶；当 b>=4 时，会总共申请 2^b+2^b/16 个桶，由于内存申请策略会向上对齐，实际申请的内存可能足以放下更多的桶；此时，取前 2^b 个桶作为存储桶，后面的为溢出桶，buckets 指向存储桶数组首位地址，nextOverflow 指向首位溢出桶；
+* dirtyalloc 应该是 nil 或指向之前由 makeBucketArray 以相同 t 和 b 参数分配的存储桶数组；如果 dirtyalloc 是 nil 则会重新申请内存分配一个新的存储桶数组，否则 dirtyalloc 指向的数组将会被清理掉并被重新被复用为存储桶数组
 
+
+### 5，mapaccess1
+```go
+func mapaccess1(t *maptype, h *hmap, key unsafe.Pointer) unsafe.Pointer {
+	if h == nil || h.count == 0 {
+		if t.hashMightPanic() { // hash 函数是否可能引发 panic
+			t.hasher(key, 0) // see issue 23734
+		}
+		return unsafe.Pointer(&zeroVal[0])
+	}
+	if h.flags&hashWriting != 0 {
+		// 并发读写，抛出错误
+		throw("concurrent map read and map write")
+	}
+	hash := t.hasher(key, uintptr(h.hash0)) // 计算 key 的哈希值
+	m := bucketMask(h.B)                    // 返回桶的数量减一
+	// hash&m 计算哈希值对桶数量的余数，即哈希值的后 B 位对应的值
+	b := (*bmap)(add(h.buckets, (hash&m)*uintptr(t.bucketsize))) // 计算该 key 经过哈希后应该落入的桶的地址
+	if c := h.oldbuckets; c != nil {
+		//  正在扩容中
+		if !h.sameSizeGrow() {
+			// 如果是翻倍扩容，旧容量的大小应该是现在的一半，即需要计算哈希值的后 B-1 位
+			m >>= 1
+		}
+		oldb := (*bmap)(add(c, (hash&m)*uintptr(t.bucketsize)))
+		if !evacuated(oldb) {
+			// 当前旧桶没有迁移走，则直接选择旧桶
+			b = oldb
+		}
+	}
+	top := tophash(hash) // 计算顶部 8 位哈希值
+bucketloop:
+	for ; b != nil; b = b.overflow(t) {
+		// 从桶开始沿着溢出桶依次遍历
+		for i := uintptr(0); i < bucketCnt; i++ {
+			// 对每个桶依次遍历
+			if b.tophash[i] != top {
+				// 在桶中依次比较顶部哈希值，如果顶部哈希值不相等，则跳过当前值
+				if b.tophash[i] == emptyRest {
+					// 如果顶部哈希值为 emptyRest，则说明整个桶都为空，直接跳出当前桶
+					break bucketloop
+				}
+				continue
+			}
+			// 顶部哈希值相等，根据顶部哈希值索引 i 计算该哈希值对应的 key 的地址
+			k := add(unsafe.Pointer(b), dataOffset+i*uintptr(t.keysize))
+			if t.indirectkey() {
+				// 如果是存储 key 的指针而不是 key 本身，则解引用
+				k = *((*unsafe.Pointer)(k))
+			}
+			if t.key.equal(key, k) {
+				// 如果桶中存储的 key 与待查找的 key 相等，则计算该 key 对应的值的地址
+				e := add(unsafe.Pointer(b), dataOffset+bucketCnt*uintptr(t.keysize)+i*uintptr(t.elemsize))
+				if t.indirectelem() {
+					// 如果存储 elem 的指针而不是 elem 本身，则解引用
+					e = *((*unsafe.Pointer)(e))
+				}
+				// 找到 key 对应的 elem，直接返回
+				return e
+			}
+			// 如果桶中存储的 key 与待查找的 key 相等，继续查找下一个元素
+		}
+		// 继续查找下一个桶，直至溢出桶结束
+	}
+	// 在 key 哈希值对应的桶及其溢出桶都没有找到，则直接返回零值指针
+	return unsafe.Pointer(&zeroVal[0])
+}
+```
+* mapaccess1 返回指向 h[key] 的指针，从不返回 nil，相反，如果键不在 map 中，它将返回对 elem 类型的零值对象的引用，返回的指针可能会使整个 map 保持活动状态，因此不要长时间保留它；
+* 如果 map 为空或是没有元素，直接返回指向零值的指针，如果有其他 goroutine 正在写，则直接抛出并发读写错误，不可恢复；
+* 具体查找逻辑：
+	* 计算 key 对应的哈希值，根据桶数组的对数值 B 计算出该 key 对应的存储桶；
+	* 如果 map 正在扩容中，并且是翻倍扩容，那么该 key 对应的旧存储桶序号可能与新存储桶不一致，需要根据旧桶数组的对数值 B' 重新计算 key 对应的旧存储桶；
+	* 如果该旧存储桶已经迁移完成了，则直接在新存储桶里面查找，否则直接在旧存储桶中查找；
+	* 通过 key 的哈希值确定存储桶后，依次遍历存储桶及其溢出桶，遍历每个桶时，依次与每个顶部哈希值比较，顶部哈希值相等时，再去与 key 进行比较，key 相等时，直接获取其对应的 elem 的指针，存储桶及其溢出桶都遍历完还没有找到时，则直接返回指向零值的指针；
+
+::: details
+```go
+func mapaccess2(t *maptype, h *hmap, key unsafe.Pointer) (unsafe.Pointer, bool) {
+	if h == nil || h.count == 0 {
+		if t.hashMightPanic() {
+			t.hasher(key, 0) // see issue 23734
+		}
+		return unsafe.Pointer(&zeroVal[0]), false
+	}
+	if h.flags&hashWriting != 0 {
+		throw("concurrent map read and map write")
+	}
+	hash := t.hasher(key, uintptr(h.hash0))
+	m := bucketMask(h.B)
+	b := (*bmap)(add(h.buckets, (hash&m)*uintptr(t.bucketsize)))
+	if c := h.oldbuckets; c != nil {
+		if !h.sameSizeGrow() {
+			// There used to be half as many buckets; mask down one more power of two.
+			m >>= 1
+		}
+		oldb := (*bmap)(add(c, (hash&m)*uintptr(t.bucketsize)))
+		if !evacuated(oldb) {
+			b = oldb
+		}
+	}
+	top := tophash(hash)
+bucketloop:
+	for ; b != nil; b = b.overflow(t) {
+		for i := uintptr(0); i < bucketCnt; i++ {
+			if b.tophash[i] != top {
+				if b.tophash[i] == emptyRest {
+					break bucketloop
+				}
+				continue
+			}
+			k := add(unsafe.Pointer(b), dataOffset+i*uintptr(t.keysize))
+			if t.indirectkey() {
+				k = *((*unsafe.Pointer)(k))
+			}
+			if t.key.equal(key, k) {
+				e := add(unsafe.Pointer(b), dataOffset+bucketCnt*uintptr(t.keysize)+i*uintptr(t.elemsize))
+				if t.indirectelem() {
+					e = *((*unsafe.Pointer)(e))
+				}
+				return e, true
+			}
+		}
+	}
+	return unsafe.Pointer(&zeroVal[0]), false
+}
+
+func mapaccessK(t *maptype, h *hmap, key unsafe.Pointer) (unsafe.Pointer, unsafe.Pointer) {
+	if h == nil || h.count == 0 {
+		return nil, nil
+	}
+	hash := t.hasher(key, uintptr(h.hash0))
+	m := bucketMask(h.B)
+	b := (*bmap)(add(h.buckets, (hash&m)*uintptr(t.bucketsize)))
+	if c := h.oldbuckets; c != nil {
+		if !h.sameSizeGrow() {
+			m >>= 1
+		}
+		oldb := (*bmap)(add(c, (hash&m)*uintptr(t.bucketsize)))
+		if !evacuated(oldb) {
+			b = oldb
+		}
+	}
+	top := tophash(hash)
+bucketloop:
+	for ; b != nil; b = b.overflow(t) {
+		for i := uintptr(0); i < bucketCnt; i++ {
+			if b.tophash[i] != top {
+				if b.tophash[i] == emptyRest {
+					break bucketloop
+				}
+				continue
+			}
+			k := add(unsafe.Pointer(b), dataOffset+i*uintptr(t.keysize))
+			if t.indirectkey() {
+				k = *((*unsafe.Pointer)(k))
+			}
+			if t.key.equal(key, k) {
+				e := add(unsafe.Pointer(b), dataOffset+bucketCnt*uintptr(t.keysize)+i*uintptr(t.elemsize))
+				if t.indirectelem() {
+					e = *((*unsafe.Pointer)(e))
+				}
+				return k, e
+			}
+		}
+	}
+	return nil, nil
+}
+```
+:::
+* mapaccess2 与 mapaccess1 相比，多返回的一个 bool 值，true 表示取到了真实的值而不是零值，false 表示取到了零值；
+* mapaccessK 与 mapaccess1 相比，同时返回了 key 和 elem 的指针，用于 map 迭代器；
+
+### 6，mapassign
+* mapassign 用于向 map 中，与 mapaccess 类似，但是如果 map 中没有该 key 时，会为其分配一个槽
+* map 为 nil，直接 panic，无法向一个 nil 中写数据；
+```go
+func mapassign(t *maptype, h *hmap, key unsafe.Pointer) unsafe.Pointer {
+	if h == nil {
+		// map 为 nil，直接 panic，无法向一个 nil 中写数据
+		panic(plainError("assignment to entry in nil map"))
+	}
+	if h.flags&hashWriting != 0 {
+		// 并发写抛出错误
+		throw("concurrent map writes")
+	}
+	hash := t.hasher(key, uintptr(h.hash0))
+
+	// 调用 t.hasher 再后设置 hashWriting，因为 t.hasher 可能会 panic，在这种情况下，实际上还没有进行写入
+	h.flags ^= hashWriting
+
+	if h.buckets == nil {
+		// 如果桶为空，则创建一个新的桶，初始状态为一个桶
+		h.buckets = newobject(t.bucket) // newarray(t.bucket, 1)
+	}
+
+again:
+	bucket := hash & bucketMask(h.B) // 计算该 key 对应的桶的索引号
+	if h.growing() {
+		// 如果 map 处于扩容过程中，则迁移该桶及其后续未迁移的桶（如果还有的话）
+		growWork(t, h, bucket)
+	}
+	// 直接从存储桶数组 h.buckets 中获取 bucket 索引对应的桶（如果在搬迁，该存储桶数组是新的，h.B 也是新存储桶数组的长度对数）
+	b := (*bmap)(add(h.buckets, bucket*uintptr(t.bucketsize)))
+	top := tophash(hash)
+
+	var inserti *uint8         // 顶部哈希值数组中空单元格的地址
+	var insertk unsafe.Pointer // key 数组中空单元格的地址
+	var elem unsafe.Pointer    // elem 数组中空单元格的地址或是 k 对应的 elem 的地址
+
+bucketloop: // 从桶中找到当前 k，或是找到一个空的单元格
+	for {
+		// 依次遍历存储桶及其溢出桶，在桶中依次遍历每个顶部哈希值、key、elem
+		for i := uintptr(0); i < bucketCnt; i++ {
+			if b.tophash[i] != top {
+				// 顶部哈希值不相等，即不是要找的 k
+				if isEmpty(b.tophash[i]) && inserti == nil {
+					// 如果当前 b.tophash[i] 为空，且 inserti 为空，则记录当前 i 对应的 key、elem 对应的地址
+					// 即 inserti 用于存储第一个为空的顶部哈希值数组单元格的地址
+					inserti = &b.tophash[i]
+					insertk = add(unsafe.Pointer(b), dataOffset+i*uintptr(t.keysize))
+					elem = add(unsafe.Pointer(b), dataOffset+bucketCnt*uintptr(t.keysize)+i*uintptr(t.elemsize))
+				}
+				if b.tophash[i] == emptyRest {
+					// 如果此单元格为空，并且在较高的索引或溢出处不再有非空单元格，则跳出大循环 bucketloop
+					break bucketloop
+				}
+				// 如果此空单元格之后还有其他的非空单元格，继续往后遍历其他单元格
+				continue
+			}
+			// 顶部哈希值相等，可能是要找到的 k，取 i 对应的位置的 key
+			k := add(unsafe.Pointer(b), dataOffset+i*uintptr(t.keysize))
+			if t.indirectkey() {
+				// 存储的是指针，解引用
+				k = *((*unsafe.Pointer)(k))
+			}
+			// 判断存储的 key 是否与查找的 k 相等
+			if !t.key.equal(key, k) {
+				// 不相等，继续往后遍历其他单元格
+				continue
+			}
+			// key 相等，找到了该 key
+			if t.needkeyupdate() {
+				// 如果需要更新该 key 则直接更新
+				typedmemmove(t.key, k, key)
+			}
+			// 获取该 key 对应的 elem 的地址，跳转到 done
+			elem = add(unsafe.Pointer(b), dataOffset+bucketCnt*uintptr(t.keysize)+i*uintptr(t.elemsize))
+			goto done
+		}
+		// 如果在该桶中既没有找到当前 k，也没有找到空的单元格或找到的空单元格后较高的索引或溢出处有非空单元格
+		// 则继续往后遍历其他溢出桶
+		ovf := b.overflow(t)
+		if ovf == nil {
+			break
+		}
+		b = ovf
+	}
+
+	// 执行到此处，说明没有找到相等的 key
+	// 如果命中了负载因子阈值或是有太多的溢出桶，并且又没有正在扩容，则开始扩容
+	if !h.growing() && (overLoadFactor(h.count+1, h.B) || tooManyOverflowBuckets(h.noverflow, h.B)) {
+		// 开始扩容，创建存储桶数组和溢出桶数组，并分布切换旧桶数组指针和旧溢出桶数组指针的指向，不做实际搬迁
+		hashGrow(t, h)
+		// 开始扩容后，存储桶数组地址发生改变，数组长度可能也会发生改变，需要跳转到 again 重新开始查找
+		goto again
+	}
+
+	if inserti == nil {
+		// 没有找到相等的 key，且 inserti 又为 nil，则说明当前桶及其溢出桶已经满了，直接创建一个新的溢出桶
+		newb := h.newoverflow(t, b)
+		inserti = &newb.tophash[0]
+		insertk = add(unsafe.Pointer(newb), dataOffset)
+		elem = add(insertk, bucketCnt*uintptr(t.keysize))
+	}
+
+	if t.indirectkey() {
+		// 存储的是 key 指针，则从堆上申请内存，并赋值地址
+		kmem := newobject(t.key)
+		*(*unsafe.Pointer)(insertk) = kmem
+		insertk = kmem
+	}
+	if t.indirectelem() {
+		// 存储的是 elem 指针，则从堆上申请内存，并赋值地址
+		vmem := newobject(t.elem)
+		*(*unsafe.Pointer)(elem) = vmem
+	}
+	// 执行到此处说明是 map 中新增了元素，记录 key、top，并且 map 中的元素数量加一
+	typedmemmove(t.key, insertk, key)
+	*inserti = top
+	h.count++
+
+done: // 直接跳转到此处说明是找到了已经存储的 key
+	if h.flags&hashWriting == 0 {
+		// 有其他 goroutine 正在写，抛出错误
+		throw("concurrent map writes")
+	}
+	h.flags &^= hashWriting // 清除写标志
+	if t.indirectelem() {
+		elem = *((*unsafe.Pointer)(elem))
+	}
+	// 返回 value 的地址，直接更新或赋值
+	// TODO 此处了已经解除了写标志，是否存在在更新过程中有其他 goroutine 正在读写的问题？
+	return elem
+}
+```
 
 
 > **参考文章**<br>
