--- a/docs/01.语言/01.Go/15.map.md
+++ b/docs/01.语言/01.Go/15.map.md
@@ -571,8 +571,6 @@ bucketloop:
 * mapaccessK 与 mapaccess1 相比，同时返回了 key 和 elem 的指针，用于 map 迭代器；
 
 ### 6，mapassign
-* mapassign 用于向 map 中，与 mapaccess 类似，但是如果 map 中没有该 key 时，会为其分配一个槽
-* map 为 nil，直接 panic，无法向一个 nil 中写数据；
 ```go
 func mapassign(t *maptype, h *hmap, key unsafe.Pointer) unsafe.Pointer {
 	if h == nil {
@@ -662,6 +660,7 @@ bucketloop: // 从桶中找到当前 k，或是找到一个空的单元格
 		// 开始扩容，创建存储桶数组和溢出桶数组，并分布切换旧桶数组指针和旧溢出桶数组指针的指向，不做实际搬迁
 		hashGrow(t, h)
 		// 开始扩容后，存储桶数组地址发生改变，数组长度可能也会发生改变，需要跳转到 again 重新开始查找
+		// 并更新存储桶 b 的地址，并迁移数据，如果仍然没有找到，则将 key 写入 map 时能够写入正确的桶
 		goto again
 	}
 
@@ -703,7 +702,62 @@ done: // 直接跳转到此处说明是找到了已经存储的 key
 	return elem
 }
 ```
+* mapassign 用于向 map 中，与 mapaccess 类似，但是如果 map 中没有该 key 时，会为其分配一个槽
+* map 为 nil，直接 panic，无法向一个 nil 中写数据；
+* 如果有其他 goroutine 正在写，抛出并发写错误；否则，添加一个写标志，此处对 flags 字段的读写都是非原子非加锁的，所以 map 并不保证并发安全；
+* 如果该 map 没有桶，则创建一个新的桶，初始状态为一个桶，与前面 makemap 呼应，makemap 时可以不实际创建桶，只要在需要写入的时候才创建；
+* 根据哈希值计算该 key 对应的存储桶数组的索引，假设为 ni，如果该 map 正在扩容，且旧桶数组中应该要迁移到新桶 ni 的旧桶 oi 还没有迁移，则将该旧桶 oi 及其溢出桶进行迁移，再进行遍历；
+* 根据 ni 获取桶指针，依次遍历该存储桶及其溢出桶，遍历每个桶时，依次与每个顶部哈希值比较，顶部哈希值相等时，再去与 key 进行比较，key 相等时，获取其对应的 elem 地址并返回，会直接根据该地址对 elem 进行更新或赋值；
+* 如果存储桶及其溢出桶都遍历完还没有找到时，则需要向该 map 插入该 key，如果 map 没有在扩容，则需要判断插入 key 后是否会导致 map 触发扩容；
+* 如果触发了扩容，则开始扩容，此扩容只创建存储桶数组和溢出桶数组，并分别切换旧存储桶数组指针和旧溢出桶数组指针的指向，不做实际搬迁；
+* 开始扩容后，存储桶数组地址发生改变，数组长度可能也会发生改变，需要重新计算桶的索引和地址，以及进行数据迁移，并重新查找，如果仍然找不到，需要将 key 插入 map，能够保证 key 会写入正确的桶；
+* 如果 key 找到了，返回其对应的 elem 地址返回；否则，插入 key，并获取其对应的 elem 地址返回；
+```go
+// 开始扩容，只创建存储桶数组和溢出桶数组，并分别切换旧桶数组指针和旧溢出桶数组指针的指向，不做实际搬迁
+func hashGrow(t *maptype, h *hmap) {
+	// 如果命中了负载的因子，则翻倍扩容，否则就是有太多的溢出桶，做等量扩容
+	bigger := uint8(1)
+	if !overLoadFactor(h.count+1, h.B) {
+		// 没有超过负载因子，等量扩容
+		bigger = 0
+		h.flags |= sameSizeGrow
+	}
+	oldbuckets := h.buckets
+	// 创建新存储桶数组和下一个溢出桶
+	newbuckets, nextOverflow := makeBucketArray(t, h.B+bigger, nil)
 
+	// 清除桶的迭代器的状态
+	flags := h.flags &^ (iterator | oldIterator)
+	if h.flags&iterator != 0 {
+		flags |= oldIterator
+	}
+	h.B += bigger             // 更新桶数量
+	h.flags = flags           // 更新标志，如果是 iterator 则更新为 oldIterator
+	h.oldbuckets = oldbuckets // 旧桶数组指针指向的是当前存储桶数组
+	h.buckets = newbuckets    // 当前存储桶数组指针指向的是新创建的存储数组
+	h.nevacuate = 0           // 迁移进度数置为 0
+	h.noverflow = 0           // 溢出桶数量置为 0
+
+	if h.extra != nil && h.extra.overflow != nil {
+		// 旧溢出桶数组指针不为空，说明上一次扩容可能还没有完成，抛出错误
+		if h.extra.oldoverflow != nil {
+			throw("oldoverflow is not nil")
+		}
+		// 将旧溢出桶数组指针指向当前溢出桶数组，并将当前溢出桶数组指针置为 nil
+		h.extra.oldoverflow = h.extra.overflow
+		h.extra.overflow = nil
+	}
+	if nextOverflow != nil {
+		if h.extra == nil {
+			h.extra = new(mapextra)
+		}
+		// 为下一个溢出桶指针赋值
+		h.extra.nextOverflow = nextOverflow
+	}
+
+	// 哈希表数据的实际搬迁在 growWork() 和 evacuate() 中
+}
+```
 
 > **参考文章**<br>
 > [1] [二郎腿的博客](https://erlangtui.top)<br>
