--- a/docs/01.语言/01.Go/15.map.md
+++ b/docs/01.语言/01.Go/15.map.md
@@ -12,7 +12,6 @@ author:
   link: https://github.com/erlangtui
 ---
 
-* <span style="color: red;">基本的实现逻辑</span>
 ::: tip
 本文代码基于 go1.17.13，src/runtime/chan.go
 :::
@@ -190,6 +189,8 @@ func (h *hmap) createOverflow() {
 
 // 是否正在扩容，等量扩容或翻倍扩容，即旧溢出桶数组指针 oldbuckets 不为空
 func (h *hmap) growing() bool {
+	// 在 hashGrow 函数值中进行置为非空，即开始扩容了
+	// 在 advanceEvacuationMark 和 mapclear 函数中置为空，即扩容完成或是清空了
 	return h.oldbuckets != nil
 }
 
@@ -303,9 +304,8 @@ func makemap_small() *hmap {
 * `makemap_small` 为 `make(map[k]v)` 和 `make(map[k]v, hint)` 创建 map，前提是在编译时已知 hint 最多为 bucketCnt，并且需要在堆上分配 hmap，即通过 new 创建 *hmap 指针；
 * 其桶的创建是在 mapassign 函数中完成的，即在插入数据时惰性创建；
 
+::: details
 ```go
-// makemap make(map[k]v, hint) 的实现，如果编译器已经检测到能够在栈上创建 map 或第一个桶，则 h 或 bucket 非空
-// 如果 h 非空，则能够直接在 h 上创建 map, 如果 h.buckets 非空，则指向的 bucket 可以用作第一个存储桶
 func makemap(t *maptype, hint int, h *hmap) *hmap {
 	// 计算需要申请的内存大小，并进行校验
 	mem, overflow := math.MulUintptr(uintptr(hint), t.bucket.size)
@@ -340,10 +340,12 @@ func makemap(t *maptype, hint int, h *hmap) *hmap {
 	return h
 }
 ```
+:::
 * `makemap` 用于创建能够存储 hint 个键值对的 map；
 * 根据 hint 确定 B 的值，以保证 2^B 个桶能够装下 hint 个元素，且负载因子在约定范围内；
 * 如果只需要一个桶，则延迟在 `mapassign` 函数中进行创建；否则，直接通过`makeBucketArray`创建多个桶及一些溢出桶（如果 B 够大）；
 
+::: details
 ```go
 func makeBucketArray(t *maptype, b uint8, dirtyalloc unsafe.Pointer) (buckets unsafe.Pointer, nextOverflow *bmap) {
 	base := bucketShift(b)
@@ -393,12 +395,14 @@ func makeBucketArray(t *maptype, b uint8, dirtyalloc unsafe.Pointer) (buckets un
 	return buckets, nextOverflow
 }
 ```
+:::
 * makeBucketArray 用于创建一个存储桶数组，如果键值对较多的话，会额外创建一些桶作为溢出桶，并返回该数组的地址和第一个溢出桶地址(存储在mapextra结构体的nextOverflow字段)；这些桶在内存上是连续的，取前部分为存储桶，后部分为溢出桶，最后一个溢出桶的溢出指针不为空，以表示该桶是最后一个桶，方便在以指针运算的方式遍历溢出桶时能够获取结束标志；
 * 2^b 是需要分配存储桶的最小数量，当 b<4 时，溢出的可能性不大，不会创建溢出桶；当 b>=4 时，会总共申请 2^b+2^b/16 个桶，由于内存申请策略会向上对齐，实际申请的内存可能足以放下更多的桶；此时，取前 2^b 个桶作为存储桶，后面的为溢出桶，buckets 指向存储桶数组首位地址，nextOverflow 指向首位溢出桶；
 * dirtyalloc 应该是 nil 或指向之前由 makeBucketArray 以相同 t 和 b 参数分配的存储桶数组；如果 dirtyalloc 是 nil 则会重新申请内存分配一个新的存储桶数组，否则 dirtyalloc 指向的数组将会被清理掉并被重新被复用为存储桶数组
 
 
 ### 5，mapaccess1
+::: details
 ```go
 func mapaccess1(t *maptype, h *hmap, key unsafe.Pointer) unsafe.Pointer {
 	if h == nil || h.count == 0 {
@@ -465,6 +469,7 @@ bucketloop:
 	return unsafe.Pointer(&zeroVal[0])
 }
 ```
+:::
 * mapaccess1 返回指向 h[key] 的指针，从不返回 nil，相反，如果键不在 map 中，它将返回对 elem 类型的零值对象的引用，返回的指针可能会使整个 map 保持活动状态，因此不要长时间保留它；
 * 如果 map 为空或是没有元素，直接返回指向零值的指针，如果有其他 goroutine 正在写，则直接抛出并发读写错误，不可恢复；
 * 具体查找逻辑：
@@ -571,6 +576,7 @@ bucketloop:
 * mapaccessK 与 mapaccess1 相比，同时返回了 key 和 elem 的指针，用于 map 迭代器；
 
 ### 6，mapassign
+::: details
 ```go
 func mapassign(t *maptype, h *hmap, key unsafe.Pointer) unsafe.Pointer {
 	if h == nil {
@@ -702,6 +708,7 @@ done: // 直接跳转到此处说明是找到了已经存储的 key
 	return elem
 }
 ```
+:::
 * mapassign 用于向 map 中，与 mapaccess 类似，但是如果 map 中没有该 key 时，会为其分配一个槽
 * map 为 nil，直接 panic，无法向一个 nil 中写数据；
 * 如果有其他 goroutine 正在写，抛出并发写错误；否则，添加一个写标志，此处对 flags 字段的读写都是非原子非加锁的，所以 map 并不保证并发安全；
@@ -712,6 +719,9 @@ done: // 直接跳转到此处说明是找到了已经存储的 key
 * 如果触发了扩容，则开始扩容，此扩容只创建存储桶数组和溢出桶数组，并分别切换旧存储桶数组指针和旧溢出桶数组指针的指向，不做实际搬迁；
 * 开始扩容后，存储桶数组地址发生改变，数组长度可能也会发生改变，需要重新计算桶的索引和地址，以及进行数据迁移，并重新查找，如果仍然找不到，需要将 key 插入 map，能够保证 key 会写入正确的桶；
 * 如果 key 找到了，返回其对应的 elem 地址返回；否则，插入 key，并获取其对应的 elem 地址返回；
+
+### 7，hashGrow
+::: details
 ```go
 // 开始扩容，只创建存储桶数组和溢出桶数组，并分别切换旧桶数组指针和旧溢出桶数组指针的指向，不做实际搬迁
 func hashGrow(t *maptype, h *hmap) {
@@ -758,6 +768,396 @@ func hashGrow(t *maptype, h *hmap) {
 	// 哈希表数据的实际搬迁在 growWork() 和 evacuate() 中
 }
 ```
+:::
+* 标记该 map 在扩容过程中，即旧存储桶数组指针 h.oldbuckets 不为空；
+* 创建存储桶数组和溢出桶，并将旧存储桶数组指针 h.oldbuckets 指向现在的存储桶数组 h.buckets，现在的存储桶数组指针 h.oldbuckets 指向新创建的存储桶数组 newbuckets，让下一个溢出桶指针 h.extra.nextOverflow 指向新创建的溢出桶 nextOverflow；
+* 以及更新扩容类型、桶数量、溢出桶数量、迁移进度等，不做实际搬迁，数据的实际搬迁在 growWork() 和 evacuate() 中；
 
-> **参考文章**<br>
-> [1] [二郎腿的博客](https://erlangtui.top)<br>
+```go
+// 判断 count 元素放置在 2^B 个存储桶中是否超过负载因子
+func overLoadFactor(count int, B uint8) bool {
+	return count > bucketCnt && uintptr(count) > loadFactorNum*(bucketShift(B)/loadFactorDen)
+}
+// 是否有太多的溢出桶，即溢出桶的数量近似大于存储桶数量 2^B
+func tooManyOverflowBuckets(noverflow uint16, B uint8) bool {
+	// 请注意，这些溢出桶中的大多数必须处于稀疏使用状态；如果使用密集，那么可能已经触发了翻倍扩容
+	// 如果阈值太小，需要做无关的工作；如果阈值太大，map 的扩容和收缩保留了大量未使用的内存
+	// "too many" 意味着与存储桶近似一样多的数量，可以参考 incrnoverflow 函数
+	if B > 15 {
+		B = 15
+	}
+	return noverflow >= uint16(1)<<(B&15)
+}
+```
+* 扩容条件判断，即元素数量过多超过负载因子，或是溢出桶数量过多近似超过存储桶数量
+
+### 8，growWork
+```go
+func growWork(t *maptype, h *hmap, bucket uintptr) {
+	// bucket&h.oldbucketmask() 计算新存储桶数组 bucket 序号处的桶应该是从旧存储桶数组中哪个序号对应的桶迁移过来的，并迁移该旧桶及其溢出桶
+	evacuate(t, h, bucket&h.oldbucketmask())
+
+	// 经过 evacuate 迁移后，h.nevacuate 在函数 advanceEvacuationMark 更新
+	if h.growing() {
+		// 如果正在扩容，多迁移一个 h.nevacuate 索引处的桶；如果扩容完成，则 h.oldbuckets 为 nil，该语句进不来
+		// 即每次最多只迁移 2 个旧存储桶及其溢出桶
+		evacuate(t, h, h.nevacuate)
+	}
+}
+```
+* 迁移将要迁移到新存储桶数组第 bucket 个桶的旧桶及其溢出桶，可能会多迁移一个旧桶及其溢出桶；
+* 先计算新存储桶数组 bucket 序号处的桶应该是从旧存储桶数组中哪个序号对应的桶迁移过来的，并迁移该旧桶及其溢出桶；
+
+::: details
+```go
+// evacDst 迁移目的地
+type evacDst struct {
+	b *bmap          // 当前要迁移到的新存储桶
+	i int            // key/elem 将要迁往新存储桶 b 中的索引 i 处
+	k unsafe.Pointer // 新存储桶 b 中第 i 个 key 的地址
+	e unsafe.Pointer // 新存储桶 b 中第 i 个 elem 的地址
+}
+func evacuate(t *maptype, h *hmap, oldbucket uintptr) {
+	// h.oldbuckets 桶数组中存放的是待迁移的数据
+	// h.buckets  桶数组中存放的是需要从旧桶中迁移来的数据，在 hashGrow 函数中创建的
+	b := (*bmap)(add(h.oldbuckets, oldbucket*uintptr(t.bucketsize))) // 获取旧桶数组中第 oldbucket 个桶
+	newbit := h.noldbuckets()                                        // 旧桶个数，2^B'，B' 是旧存储桶数组的 B
+	if !evacuated(b) {                                               // 旧桶没有被迁移走
+		// xy 包含 x 和 y (low 和 high) 迁移目的地，分别用于存储当前桶的前半部分数据和后半部分数据
+		// 如果是等量扩容，x y 分别表示同一个新桶数组的前后半部分；
+		// 如果是翻倍扩容，x y 分别表示新桶数组中前半部分和后半部分中的某个桶，桶的索引为 oldbucket、newbit+oldbucket
+		var xy [2]evacDst
+		x := &xy[0]
+		// 等量扩容，新存储桶数组的长度是与旧桶长度相等，key 的哈希值对新存储桶数组的长度的余值是不变的，即桶的索引值不变
+		// 所以直接从新桶数组的相同索引处的桶作为旧桶 oldbucket 的迁移目的地
+		x.b = (*bmap)(add(h.buckets, oldbucket*uintptr(t.bucketsize)))
+		// k、e 分别指向新桶的首位 key、elem 地址
+		x.k = add(unsafe.Pointer(x.b), dataOffset)
+		x.e = add(x.k, bucketCnt*uintptr(t.keysize))
+
+		if !h.sameSizeGrow() {
+			// 只有翻倍扩容时才计算 y 指针，否则 GC 可能会看到错误的指针
+			y := &xy[1]
+			// 翻倍扩容，新桶数组的长度是 2*newbit，即两倍于旧桶长度
+			// key 的哈希值对新存储桶数组的长度的余值可能是不变的，也可能是旧的余值加上 2^B'（旧存储桶数组的 B 值），取决于 hash 值第 B 位是 0 还是 1，从右到左第 0 位开始
+			// y 表示从新桶数组的 oldbucket+newbit 索引处的桶作为旧桶 oldbucket 的迁移目的地，以区别与 x
+			y.b = (*bmap)(add(h.buckets, (oldbucket+newbit)*uintptr(t.bucketsize)))
+			y.k = add(unsafe.Pointer(y.b), dataOffset)
+			y.e = add(y.k, bucketCnt*uintptr(t.keysize))
+		}
+		// x、y 分别对应的目的桶地址、key、elem 地址都已经计算完毕
+		// 对于等量扩容，只能使用 x
+		// 对于翻倍扩容，使用 x 还是 y，取决于 key 的哈希值第 B 位是 0 还是 1，从右到左第 0 位开始
+
+		// 依次遍历旧桶及其溢出桶
+		for ; b != nil; b = b.overflow(t) {
+			k := add(unsafe.Pointer(b), dataOffset)
+			e := add(k, bucketCnt*uintptr(t.keysize))
+			// 依次遍历当前旧桶或溢出桶的 key、elem
+			for i := 0; i < bucketCnt; i, k, e = i+1, add(k, uintptr(t.keysize)), add(e, uintptr(t.elemsize)) {
+				top := b.tophash[i] // 获取当前 key 的顶部哈希值
+				if isEmpty(top) {
+					// 元素为空，更新顶部哈希值为已经搬走了，继续下一个
+					b.tophash[i] = evacuatedEmpty
+					continue
+				}
+				// 顶部哈希值异常，抛出错误
+				if top < minTopHash {
+					throw("bad map state")
+				}
+				k2 := k
+				if t.indirectkey() {
+					// 存储的是 key 的指针，解引用得到真正的key
+					k2 = *((*unsafe.Pointer)(k2))
+				}
+				var useY uint8 // 0 或 1，默认是 0 ，即等量扩容
+				if !h.sameSizeGrow() {
+					// 翻倍扩容，计算哈希值，以做出迁移决策(是否需要将 key/elem 发送到 桶 x 或 桶 y)
+					hash := t.hasher(k2, uintptr(h.hash0))
+					if h.flags&iterator != 0 && !t.reflexivekey() && !t.key.equal(k2, k2) {
+						// 有一种 key，每次对它计算 hash，得到的结果都不一样，这个 key 就是 math.NaN()，not a number，类型是 float64
+						// 当它作为 map 的 key，在迁移的时候，会遇到一个问题：再次计算它的哈希值和它当初插入 map 时的计算出来的哈希值不一样
+						// 此外，它是不可重复的。在迭代器存在的情况下，需要可重复性，因为迁移决策必须与迭代器做出的任何决策相匹配。
+						// 幸运的是，无论哪种方式，都可以自由地发送这些 key。此外，tophash 对于这些类型的 key 毫无意义。
+						// 让低位的 tophash 来决定迁移目的桶。为下一级别重新计算一个新的随机 tophash，以便这些 key 在多次扩容后均匀分布在所有存储桶中。
+						useY = top & 1
+						top = tophash(hash)
+					} else {
+						// 对于翻倍扩容，key 的哈希值对新存储桶数组的长度的余值可能是不变的，也可能是旧的余值加上 2^B（旧存储桶数组的 B 值）
+						// 使用 x 还是 y，取决于 key 的哈希值第 B 位是 0 还是 1，从右到左第 0 位开始
+						// eg: B=4, 2^B=16, 即二进制 10000, 如果 hash 的第 4 位不为 0 则 新余值=旧余值+16，使用后半部分的桶
+						if hash&newbit != 0 {
+							useY = 1
+						}
+					}
+				}
+
+				// 默认值校验
+				if evacuatedX+1 != evacuatedY || evacuatedX^1 != evacuatedY {
+					throw("bad evacuatedN")
+				}
+
+				// 根据 useY 更新旧桶的顶部哈希值，以及确定使用 x 还是 y 作为目的桶
+				b.tophash[i] = evacuatedX + useY // evacuatedX + 1 == evacuatedY
+				dst := &xy[useY]                 // evacuation destination
+
+				if dst.i == bucketCnt {
+					// 当前桶已经放满了，创建溢出桶，索引归零，并更新桶、key、elem 地址
+					dst.b = h.newoverflow(t, dst.b)
+					dst.i = 0
+					dst.k = add(unsafe.Pointer(dst.b), dataOffset)
+					dst.e = add(dst.k, bucketCnt*uintptr(t.keysize))
+				}
+				dst.b.tophash[dst.i&(bucketCnt-1)] = top // 屏蔽 dst.i 作为一种优化，以避免边界检查
+				// 搬移 key 到新桶第 i 个 key 处
+				if t.indirectkey() {
+					*(*unsafe.Pointer)(dst.k) = k2 // copy pointer
+				} else {
+					typedmemmove(t.key, dst.k, k) // copy elem
+				}
+				// 搬移 elem 到新桶第 i 个 elem 处
+				if t.indirectelem() {
+					*(*unsafe.Pointer)(dst.e) = *(*unsafe.Pointer)(e)
+				} else {
+					typedmemmove(t.elem, dst.e, e)
+				}
+				// 更新目的桶中的索引、key、elem，即在目的桶中向后移
+				// 这些更新可能会将这些指针越过 key 或 elem 数组的末尾，但是没关系，因为在存储桶的末端有溢出桶指针，可以防止指向存储桶的末端
+				dst.i++
+				dst.k = add(dst.k, uintptr(t.keysize))
+				dst.e = add(dst.e, uintptr(t.elemsize))
+			}
+		}
+		// 如果没有协程在使用旧的存储桶数组，就把该旧桶 oldbucket 清除掉，帮助gc
+		if h.flags&oldIterator == 0 && t.bucket.ptrdata != 0 {
+			b := add(h.oldbuckets, oldbucket*uintptr(t.bucketsize))
+			// 保留 b.tophash，因为那里保持了迁移状态
+			ptr := add(b, dataOffset)
+			n := uintptr(t.bucketsize) - dataOffset
+			memclrHasPointers(ptr, n)
+		}
+	}
+
+	// 更新迁移进度
+	if oldbucket == h.nevacuate {
+		// 只有迁移进度等于当前桶的索引时，才会去判断是否所有桶都已经迁移完毕
+		advanceEvacuationMark(h, t, newbit)
+	}
+}
+```
+:::
+
+* 完成一个存储桶及其溢出桶的所有数据迁移工作，只有在 mapassign 和 mapdelete 函数中调用，即当 map 在迁移时，只有在插入或删除某个 key，且该 key 对应的旧桶还未迁移时，才对这个旧桶及其溢出桶的数据进行迁移；
+* 如果是翻倍扩容，它会将旧桶及其溢出桶的数据分流到对应的两个新桶 x 和 y，x + 2^(B-1) = y, 使用 x 还是 y，取决于该桶中 key 的哈希值第 B 位是 0 还是 1，从右到左第 0 位开始
+* 如果是等量扩容，说明桶是桶中的数据是稀疏存储的，它会将旧桶 x' 及其溢出桶的数据迁移到新存储桶数组中序号相等的一个新桶 x；
+* 如果没有协程在使用旧的存储桶数组，就把该旧桶 oldbucket 清除掉，帮助gc；
+* 迁移进度等于当前桶的索引时，更新迁移进度计数器到下一个未迁移的桶，并在所有桶迁移结束后将旧存储桶数组 oldbuckets 和旧存储桶的溢出桶 extra.oldoverflow 置空，清除同步扩容的标志；
+
+```go
+func advanceEvacuationMark(h *hmap, t *maptype, newbit uintptr) {
+	// 如果此次搬迁的 oldbucket 等于当前进度，进度加一
+	h.nevacuate++
+	// 实验表明，1024 至少矫枉过正一个数量级。无论如何，把它放在那里作为保护措施，以确保 O(1) 行为
+	stop := h.nevacuate + 1024
+	if stop > newbit {
+		stop = newbit // 旧桶数组的长度
+	}
+	// 从 h.nevacuate 索引处开始，在旧桶数组中寻找下一个还没有迁移的桶
+	for h.nevacuate != stop && bucketEvacuated(t, h, h.nevacuate) {
+		h.nevacuate++
+	}
+	if h.nevacuate == newbit {
+		// 所有的桶都已经迁移完成，将旧桶数组指针和旧溢出桶指针置空，清除同步扩容的标志
+		h.oldbuckets = nil
+		if h.extra != nil {
+			h.extra.oldoverflow = nil
+		}
+		h.flags &^= sameSizeGrow
+	}
+}
+// 判断第 bucket 个桶是否已经迁移走，true 迁移完成
+func bucketEvacuated(t *maptype, h *hmap, bucket uintptr) bool {
+	b := (*bmap)(add(h.oldbuckets, bucket*uintptr(t.bucketsize)))
+	return evacuated(b)
+}
+```
+* 更新迁移进度计数器到下一个未迁移的桶，并在所有桶迁移结束后将旧存储桶数组 oldbuckets 和旧存储桶的溢出桶 extra.oldoverflow 置空，清除同步扩容的标志；
+
+### 9，mapdelete
+::: details
+```go
+func mapdelete(t *maptype, h *hmap, key unsafe.Pointer) {
+	// map 为 nil 或是没有 key 直接返回
+	if h == nil || h.count == 0 {
+		if t.hashMightPanic() {
+			t.hasher(key, 0) // see issue 23734
+		}
+		return
+	}
+	// 已经有其他 goroutine 正在写，直接抛出错误
+	if h.flags&hashWriting != 0 {
+		throw("concurrent map writes")
+	}
+
+	// 计算哈希值
+	hash := t.hasher(key, uintptr(h.hash0))
+
+	// 调用 t.hasher 再后设置 hashWriting，因为 t.hasher 可能会 panic，在这种情况下，实际上还没有进行写入
+	h.flags ^= hashWriting
+
+	bucket := hash & bucketMask(h.B) // 计算该 key 对应的桶的索引号
+	if h.growing() {
+		// 如果 map 处于扩容过程中，则迁移该桶及其后续未迁移的桶（如果还有的话）
+		growWork(t, h, bucket)
+	}
+	b := (*bmap)(add(h.buckets, bucket*uintptr(t.bucketsize)))
+	bOrig := b
+	top := tophash(hash)
+search: // 依次遍历当前桶及其溢出桶
+	for ; b != nil; b = b.overflow(t) {
+		// 依次遍历桶中的每个单元格
+		for i := uintptr(0); i < bucketCnt; i++ {
+			if b.tophash[i] != top {
+				// 顶部哈希值不相等
+				if b.tophash[i] == emptyRest {
+					// 此单元格为空，并且在较高的索引或溢出处不再有非空单元格，说明没有该 key 直接 跳出
+					break search
+				}
+				// 还有其他的顶部哈希值，继续往后查找其他单元格
+				continue
+			}
+			// 顶部哈希值相等，可能能够找到
+			// 获取 key 单元格的地址
+			k := add(unsafe.Pointer(b), dataOffset+i*uintptr(t.keysize))
+			k2 := k
+			if t.indirectkey() {
+				k2 = *((*unsafe.Pointer)(k2))
+			}
+			if !t.key.equal(key, k2) {
+				// 存储的 key 与实际待查找的 key 不相等，继续往后查找其他单元格
+				continue
+			}
+			// 存储的 key 相等，找到了，清除存储的 key
+			if t.indirectkey() {
+				*(*unsafe.Pointer)(k) = nil
+			} else if t.key.ptrdata != 0 {
+				memclrHasPointers(k, t.key.size)
+			}
+			// 获取 elem 的单元格地址，并清除 elem
+			e := add(unsafe.Pointer(b), dataOffset+bucketCnt*uintptr(t.keysize)+i*uintptr(t.elemsize))
+			if t.indirectelem() {
+				*(*unsafe.Pointer)(e) = nil
+			} else if t.elem.ptrdata != 0 {
+				memclrHasPointers(e, t.elem.size)
+			} else {
+				memclrNoHeapPointers(e, t.elem.size)
+			}
+			b.tophash[i] = emptyOne // 将顶部哈希值置为 emptyOne
+			if i == bucketCnt-1 {
+				// 如果位于当前桶的顶部哈希值的最后一个单元格
+				if b.overflow(t) != nil && b.overflow(t).tophash[0] != emptyRest {
+					// 如果溢出桶不为空且溢出桶的顶部哈希值第一个单元格不为 emptyRest，跳转到 notLast
+					goto notLast
+				}
+			} else {
+				// 如果不是位于当前桶的顶部哈希值的最后一个单元格
+				if b.tophash[i+1] != emptyRest {
+					// 且下一个单元格中顶部哈希值不为 emptyRest，则跳转
+					goto notLast
+				}
+			}
+			// 运行到此处说明：
+			// 如果位于当前桶的顶部哈希值的最后一个单元格，要么没有溢出桶，要么溢出桶的顶部哈希值第一个单元格为 emptyRest，即下一个溢出桶单元格都为空
+			// 如果不是位于当前桶的顶部哈希值的最后一个单元格，那么下一个单元格的顶部哈希值为 emptyRest，则下一个及其之后都为空
+			for {
+				// 当前索引 i 对应的 key、elem 都已经清除了，i 之后的也为空，所以顶部哈希值数组 i 处单元格可以置为 emptyRest
+				b.tophash[i] = emptyRest
+				// 继续向前查找其他单元格
+				if i == 0 {
+					// 如果已经的第一个单元格，则找前一个桶
+					if b == bOrig {
+						// 如果当前桶已经是第一个桶（存储桶），直接退出将其他单元格的顶部哈希值置为 emptyRest 的操作
+						break
+					}
+					c := b
+					for b = bOrig; b.overflow(t) != c; b = b.overflow(t) {
+						// 	从第一个桶 bOrig 找到当前桶的前一个桶
+					}
+					// b 现在为前一个桶，将 i 置为顶部哈希值数组的最后一个单元格索引
+					i = bucketCnt - 1
+				} else {
+					// 如果不是第一个单元格，直接往前移一个单元格
+					i--
+				}
+				if b.tophash[i] != emptyOne {
+					// 如果这个单元格不为空，直接退出将其他单元格的顶部哈希值置为 emptyRest 的操作
+					break
+				}
+				// 	这个单元格为空，后面的也都为空，下次循环时将其顶部哈希值置为 emptyRest
+			}
+		notLast:
+			h.count-- // 数量减一
+			if h.count == 0 {
+				// 数量为 0 时，重置哈希种子以防止攻击 See issue 25237.
+				h.hash0 = fastrand()
+			}
+			break search // 找到了，跳出查找
+		}
+	}
+
+	if h.flags&hashWriting == 0 {
+		// 并发写，抛出错误
+		throw("concurrent map writes")
+	}
+	h.flags &^= hashWriting // 清除写标志
+}
+```
+:::
+* 从 map 中删除某个 key；
+
+### 10，mapclear
+::: details
+```go
+func mapclear(t *maptype, h *hmap) {
+	// 如果 map 为 nil 或是没有元素，直接返回
+	if h == nil || h.count == 0 {
+		return
+	}
+
+	// 有其他 goroutine 正在写，抛出错误
+	if h.flags&hashWriting != 0 {
+		throw("concurrent map writes")
+	}
+
+	h.flags ^= hashWriting   // 按位与添加写标志
+	h.flags &^= sameSizeGrow // 按位清除等量扩容标记
+	h.oldbuckets = nil       // 旧桶数组指针清空
+	h.nevacuate = 0          // 迁移进度归零
+	h.noverflow = 0          // 溢出桶数量归零
+	h.count = 0              // 桶中元素数量归零
+
+	// 重置哈希种子，使攻击者更难重复触发哈希冲突 See issue 25237.
+	h.hash0 = fastrand()
+
+	// 保留 mapextra 分配，但清除所有额外信息
+	if h.extra != nil {
+		*h.extra = mapextra{}
+	}
+
+	// makeBucketArray 清除 h.buckets 指向的内存，并通过生成任何溢出桶来恢复它们，就像 h.buckets 是新分配的一样
+	_, nextOverflow := makeBucketArray(t, h.B, h.buckets)
+	if nextOverflow != nil {
+		// 如果创建了溢出存储桶，则在初始存储桶创建期间将分配 h.extra
+		h.extra.nextOverflow = nextOverflow
+	}
+
+	if h.flags&hashWriting == 0 {
+		// hashWriting 位被其他 goroutine 置为 0 了，抛出错误
+		throw("concurrent map writes")
+	}
+	// 清除 hashWriting 位标志
+	h.flags &^= hashWriting
+}
+```
+:::
+* mapclear 从 map 中删除所有的 key；
