--- a/docs/01.语言/01.Go/15.map.md
+++ b/docs/01.语言/01.Go/15.map.md
@@ -709,7 +709,7 @@ done: // 直接跳转到此处说明是找到了已经存储的 key
 }
 ```
 :::
-* mapassign 用于向 map 中，与 mapaccess 类似，但是如果 map 中没有该 key 时，会为其分配一个槽
+* mapassign 用于向 map 中，与 mapaccess 类似，但是如果 map 中没有该 key 时，会为其分配一个槽；
 * map 为 nil，直接 panic，无法向一个 nil 中写数据；
 * 如果有其他 goroutine 正在写，抛出并发写错误；否则，添加一个写标志，此处对 flags 字段的读写都是非原子非加锁的，所以 map 并不保证并发安全；
 * 如果该 map 没有桶，则创建一个新的桶，初始状态为一个桶，与前面 makemap 呼应，makemap 时可以不实际创建桶，只要在需要写入的时候才创建；
