--- a/docs/01.语言/01.Go/01.Slice(一).md
+++ b/docs/01.语言/01.Go/01.Slice(一).md
@@ -37,13 +37,16 @@ s := *new([]int)
 ```
 ### 5，截取
 ```go
-// data[low, high, max]
+// data[low:high:max]
 // low：最低索引，闭区间；
 // high：最高索引，开区间；
 // max：容量的最大索引，开区间，一定是索引，不能超出原切片的容量；
 // max 不指定时则包含原slice后续所有值；
- data := [...]int{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}
- s := data[2:4:6] // s 的值包含 2 3 3 5，4 5 为不可见；
+// len = high - low
+// cap = max - low
+data := [...]int{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}
+s := data[2:4:6] // s 的值包含 2 3 4 5，4 5 为不可见；
+c := data[2:4]   // c 的值包含 2, 3, 4, 5, 6, 7, 8, 9，3 之后的值都不可见
 
 func main() {
 	orderLen := 5
