--- a/docs/01.语言/01.Go/15.map.md
+++ b/docs/01.语言/01.Go/15.map.md
@@ -28,7 +28,7 @@ author:
 
 ### 2，扩容条件
 * map 在**溢出桶数量过多（近似大于存储桶的数量）或是负载因子过大**时会执行扩容逻辑；
-* 负载因子（loadFactor）即平均每个存储桶存储的键值对数量，默认情况下一个存储桶最多存储 8 个键值对；
+* 负载因子（loadFactor）即平均每个存储桶存储的键值对数量，默认一个存储桶最多存储 8 个键值对；
 * 如果负载因子太大，则产生很多溢流桶；负载因子太小，会浪费存储空间；
 
 | loadFactor | %overflow | bytes/entry | hitprobe | missprobe |
@@ -1113,7 +1113,15 @@ search: // 依次遍历当前桶及其溢出桶
 }
 ```
 :::
-* 从 map 中删除某个 key；
+* 从 map 中删除某个 key，整体逻辑与 mapassign 类似；
+* map 为 nil 或是没有 key 直接返回；已经有其他 goroutine 正在写，直接抛出并发写错误；否则，添加写标志；
+* 根据哈希值计算该 key 对应的存储桶数组的索引，假设为 ni，如果该 map 正在扩容，且旧桶数组中应该要迁移到新桶 ni 的旧桶 oi 还没有迁移，则将该旧桶 oi 及其溢出桶进行迁移，再进行遍历；
+* 根据 ni 获取桶指针，依次遍历该存储桶及其溢出桶，遍历每个桶时，依次与每个顶部哈希值比较，顶部哈希值相等时，再去与 key 进行比较，key 相等时，获取其对应的 elem 地址，分别清除 key 和 elem，并将顶部哈希值置为 emptyOne；
+* 如果该单元格之后，再也没有其他 key 了，那么该单元格的 tophash 就要改为 emptyRest，此时分为两种情况：
+ - 1，该单元格是该桶最后一个单元格，且下一个溢出桶的第一个单元格的 tophash 为 emptyRest；
+ - 2，该单元格不是该桶的最后一个单元格，且下一个单元格的 tophash 为 emptyRest；
+* 当该单元格的 tophash 置为 emptyRest，需要依次向前遍历每个单元格，将每一个 tophash 为 emptyOne 的单元格改为 emptyRest，表示该单元格及之后都为空，直到某个单元格的 tophash 不为 emptyOne，或是所有单元格都已经遍历完即达到存储桶的第一个单元格；
+*  删除某个键值对后需要将其计数减一，最后返回时需要清除写标志；
 
 ### 10，mapclear
 ::: details
@@ -1130,10 +1138,10 @@ func mapclear(t *maptype, h *hmap) {
 	}
 
 	h.flags ^= hashWriting   // 按位与添加写标志
-	h.flags &^= sameSizeGrow // 按位清除等量扩容标记
-	h.oldbuckets = nil       // 旧桶数组指针清空
-	h.nevacuate = 0          // 迁移进度归零
-	h.noverflow = 0          // 溢出桶数量归零
+	h.flags &^= sameSizeGrow // 按位清除等量扩容标记，只有清空和扩容完毕时才会清除该标志
+	h.oldbuckets = nil       // 旧桶数组指针清空，只有清空和扩容完毕时才会置为空
+	h.nevacuate = 0          // 迁移进度归零，只有清空和开始扩容时才归零
+	h.noverflow = 0          // 溢出桶数量归零，只有清空和开始扩容时才归零
 	h.count = 0              // 桶中元素数量归零
 
 	// 重置哈希种子，使攻击者更难重复触发哈希冲突 See issue 25237.
@@ -1144,7 +1152,7 @@ func mapclear(t *maptype, h *hmap) {
 		*h.extra = mapextra{}
 	}
 
-	// makeBucketArray 清除 h.buckets 指向的内存，并通过生成任何溢出桶来恢复它们，就像 h.buckets 是新分配的一样
+	// makeBucketArray 能够清除 h.buckets 指向的内存，就像 h.buckets 是新分配的一样
 	_, nextOverflow := makeBucketArray(t, h.B, h.buckets)
 	if nextOverflow != nil {
 		// 如果创建了溢出存储桶，则在初始存储桶创建期间将分配 h.extra
@@ -1160,4 +1168,6 @@ func mapclear(t *maptype, h *hmap) {
 }
 ```
 :::
-* mapclear 从 map 中删除所有的 key；
+* mapclear 从 map 中删除所有的 key，如果 map 为 nil 或是没有元素，直接返回，有其他 goroutine 正在写，抛出错误；
+* 将等量扩容标志清除、旧桶数组指针置空，这两个只有在清空和扩容完毕时才有此操作，表示当前 map 没有在扩容中；
+* 将迁移进度归零、溢出桶数量归零、键值对数量归零，以及将存储桶数组的内存清除
