--- a/docs/02.后端技术/02.Redis/11.key过期策略.md
+++ b/docs/02.后端技术/02.Redis/11.key过期策略.md
@@ -12,7 +12,7 @@ author:
   link: https://github.com/erlangtui
 ---
 
-redis 是键值对类型的数据库，可以设置建的过期时间，当 redis 中缓存的 key 过期时可以通过不同的过期策略处理过期的 key，过期策略通常有以下三种，redis 中同时使用了惰性过期和定期过期两种过期策略；
+redis 是键值对类型的数据库，可以设置 key 的过期时间，当 redis 中缓存的 key 过期时可以通过不同的过期策略处理过期的 key，过期策略通常有以下三种，**redis 中同时使用了惰性过期和定期过期两种过期策略**；
 
 ### 定时过期
 * 每个设置过期时间的 key 都需要创建一个定时器，到过期时间就会立即清除，该策略可以立即清除过期的数据，**对内存很友好，但是会占用大量的CPU资源去处理过期的数据**，从而影响缓存的响应时间和吞吐量；
