--- a/docs/02.后端技术/05.Consul/01.Consul常用的API.md
+++ b/docs/02.后端技术/05.Consul/01.Consul常用的API.md
@@ -71,4 +71,10 @@ curl --location --request GET 'http://127.0.0.1:8500/v1/health/connect/:service'
 curl --location --request GET 'http://127.0.0.1:8500/v1/health/state/:state'
 
 ```
+
+### 3，其他
+```sh
+// 获取服务注册的ip
+dig +short @127.0.0.1 -p 8600 service_name.service.consul A
+```
 > 未完待续……
