--- a/docs/02.后端技术/02.Redis/10.内存淘汰策略.md
+++ b/docs/02.后端技术/02.Redis/10.内存淘汰策略.md
@@ -12,61 +12,33 @@ author:
   link: https://github.com/erlangtui
 ---
 
-redis 的内存淘汰策略是指在 redis 用于缓存的内存不足时，如何处理需要申请额外空间的数据；redis的内存淘汰策略的选取并不会影响过期的key的处理，过期策略用于处理过期的缓存数据；
+redis 的内存淘汰策略是指<span style="color: red;">**在 redis 用于缓存的内存不足时，如何处理需要申请额外空间的数据**</span>；redis的内存淘汰策略的选取并不会影响过期的key的处理，过期策略用于处理过期的缓存数据；
 
 ### 常见的内存淘汰策略
 
-* noeviction：当内存不足时，新写入操作会报错；
-* allkeys-lru：当内存不足时，在所有的 key 中移除最近最少使用的 key；
-* allkeys-lfu：当内存不足时，在所有的 key 中移除最不常用的 key；
-* allkeys-random：当内存不足时，在所有的 key 中随机移除某个key；
-* volatile-lru：当内存不足以容纳新写入数据时，在设置了过期时间的键空间中，移除最近最少使用的key。
-* volatile-lfu：删除最不常用的键，字段设置为 。expiretrue
-* volatile-random：当内存不足以容纳新写入数据时，在设置了过期时间的键空间中，随机移除某个key。
-* volatile-ttl：当内存不足以容纳新写入数据时，在设置了过期时间的键空间中，有更早过期时间的key优先移除。
+* noeviction：当内存不足时，<span style="color: red;">**新写入操作会报错**</span>；
+* allkeys-lru：当内存不足时，<span style="color: red;">**在所有的 key 中移除最近最少使用的 key**</span>；
+* allkeys-lfu：当内存不足时，<span style="color: red;">**在所有的 key 中移除最不常用的 key**</span>；
+* allkeys-random：当内存不足时，<span style="color: red;">**在所有的 key 中随机移除某个 key**</span>；
+* volatile-lru：当内存不足时，<span style="color: red;">**在设置了过期时间的 key 中移除最近最少使用的 key**</span>；
+* volatile-lfu：当内存不足时，<span style="color: red;">**在设置了过期时间的 key 中移除最不常用的 key**</span>；
+* volatile-random：当内存不足时，<span style="color: red;">**在设置了过期时间的 key 中随机移除某个 key**</span>；
+* volatile-ttl：当内存不足时，<span style="color: red;">**在设置了过期时间的 key 中离过期时间最近的 key**</span>；
 
 如果没有设置过期时间的 key，则 volatile-lru、volatile-lfu、volatile-random 和 volatile-ttl 策略的行为类似于 noeviction；
 
 ### 淘汰策略的选择
-* 当您期望在请求的受欢迎程度中出现幂律分布时，请使用 allkeys-lru 策略。也就是说，您期望访问元素的子集的频率远远高于其他元素。 如果您不确定，这是一个不错的选择。
-* 如果您具有连续扫描所有密钥的循环访问，或者当您希望分布均匀时，请使用 allkeys-random；
-* 如果您希望在创建缓存对象时能够使用不同的 TTL 值向 redis 提供有关哪些是过期的良好候选项的提示，请使用 volatile-ttl。
-* volatile-lru 和 volatile-random 策略主要在您希望将单个实例用于缓存和拥有一组持久键时非常有用。但是，运行两个 redis 实例来解决此类问题通常是一个更好的主意。
-* 还值得注意的是，为密钥设置值会消耗内存，因此使用像 allkeys-lru 这样的策略可以提高内存效率，因为不需要在内存压力下逐出密钥的配置。expireexpire
-
-### 逐出过程的运作方式
-客户端运行一个新命令，从而添加更多数据。redis 会检查内存使用情况，如果内存使用量大于限制，则会根据策略逐出密钥。maxmemory执行新命令，依此类推。因此，不断越过内存限制的边界，越过它，然后逐出键以返回到限制之下。如果某个命令导致在一段时间内使用大量内存（例如存储到新键中的大集合交集），则内存限制可能会明显超过。
+* 如果访问某些 key 的频率远远高于其他元素，无论是否设置了过期时间，可以使用 allkeys-lru 策略；
+* 如果连续循环访问所有的 key，并且期望分布是均匀时，无论是否设置了过期时间，可以使用 allkeys-random 策略；
+* 如果有大量长期保留的数据，但同时也有一些低访问频率的数据，无论是否设置了过期时间，可以使用 allkeys-random 策略；
+* 如果在创建 key 时设置了过期时间，有很多需要精确控制过期时间的数据，可以使用 volatile-ttl 策略；
+* 如果在创建 key 时设置了过期时间，并且这些 key 对于淘汰顺序没有特别的要求，可以使用 volatile-random 策略；
+* 如果在创建 key 时设置了过期时间，某些 key 只是临时数据，访问频率较低，可以使用 volatile-lru 策略；
+* 如果在创建 key 时设置了过期时间，但是访问频率很低，可以使用 volatile-lfu 策略；
 
 ### 近似 LRU 算法
-redis LRU 算法不是一个精确的实现。这意味着 redis 是 无法选择驱逐的最佳人选，即关键 是过去访问最远的。相反，它将尝试运行一个近似值 的 LRU 算法，通过对少量密钥进行采样，然后逐出 一个是采样密钥中最好的（具有最早的访问时间）。
-
-然而，从 redis 3.0 开始，该算法得到了改进，也采用了一个好的池子 驱逐候选人。这提高了算法的性能，使 它能够更接近真实 LRU 算法的行为。
-
-redis LRU 算法的重要之处在于，您可以通过更改要检查每次逐出的样本数来调整算法的精度。此参数由以下配置指令控制：
-
-maxmemory-samples 5
-redis 不使用真正的 LRU 实现的原因是因为它 消耗更多内存。但是，对于 使用 redis 的应用程序。此图比较 具有真实 LRU 的 redis 使用的 LRU 近似值。
-
-LRU 比较
-
-生成上述图形的测试用给定数量的密钥填充了 redis 服务器。密钥是从第一个到最后一个访问的。第一个键是使用 LRU 算法逐出的最佳候选项。后来又添加了 50% 的密钥，以强制驱逐一半的旧密钥。
-
-您可以在图表中看到三种点，形成三个不同的条带。
-
-浅灰色条带是被驱逐的对象。
-灰色条带是未被逐出的对象。
-绿色条带是添加的对象。
-在理论上的 LRU 实现中，我们预计，在旧密钥中，前半部分将过期。相反，redis LRU 算法只会以概率方式使旧密钥过期。
-
-正如你所看到的，与 redis 2.8 相比，redis 3.0 在 5 个样本方面做得更好，但是 redis 2.8 仍然保留了最新访问的大多数对象。在 redis 3.0 中使用 10 的样本量，近似值非常接近 redis 3.0 的理论性能。
-
-请注意，LRU 只是一个模型，用于预测将来访问给定密钥的可能性。此外，如果您的数据访问模式密切 类似于幂律，大多数访问都将在密钥集中 LRU近似算法可以很好地处理。
-
-在仿真中，我们发现使用幂律访问模式，真正的 LRU 和 redis 近似值之间的差异很小或根本不存在。
-
-但是，您可以将样本数量提高到 10，但代价是增加一些 CPU 用法来近似真实 LRU，并检查这是否使 缓存未命中率的差异。
-
-
+* redis LRU 算法采从一池子的候选人中进行淘汰，提高了算法的性能，能够更接近真实 LRU 算法的行为，可以通过更改每次要检查的淘汰样本数来调整算法的精度；
+* redis LRU 算法是一种近似的 LRU 的算法，因为真正的 LRU 算法会消耗更多的内存；
 
 ### 新的 LFU 模式
 从 redis 4.0 开始，可以使用最不常用的逐出模式。此模式可能效果更好（提供更好的 命中率/未命中率）在某些情况下。在 LFU 模式下，redis 将尝试跟踪 项目访问的频率，因此很少使用的项目被逐出。这意味着 使用的密钥通常有更高的机会保留在内存中。
